--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1 id="head1">Heading Block Level Hi</h1>
+    <h1 id="head1">Changed</h1>
     <p id="hi" class="class1">Paragraph Inline</p>
 </body>
     <script defer type="application/javascript" src="js/app.js"></script>
